       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.31 (v0_8_31) on Linux (lb32001) on 3/23/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.31 (v0_8_31) on Linux (lb0169) on 3/23/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.31 (v0_8_31) on Linux (lb32001) on 3/23/2007 ==

2007-03-23  Brian Kahne  <bkahne@freescale.com>

	* Added support for nested template functions.  As with nested
	functions, this can be disabled by undefining NESTED_FUNCS_OKAY.
	Added parsing/in9.C to test this.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on Linux (lb32001) on 3/7/2007 ==

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on SunOS (sb0183) on 1/22/2007 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on Linux (lb32001) on 1/19/2007 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on Linux (lb32001) on 1/19/2007 

2007-01-19  Brian Kahne  <bkahne@freescale.com>

	* For Solaris, we'll compile, but we only test the parser.

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb0169) on 12/8/2006 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb32001) on 12/8/2006 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb0169) on 12/8/2006 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb32001) on 12/8/2006 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb32001) on 12/8/2006 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb32001) on 11/30/2006 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb32001) on 11/30/2006 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb32001) on 11/30/2006 
